NYSD9-446: Featured Content/Promotional Banner Spacing and Font Styling Fix

--- a/web/themes/custom/nysenate_theme/src/patterns/components/nysenate-promotional-banner/nysenate-promotional-banner.scss
+++ b/web/themes/custom/nysenate_theme/src/patterns/components/nysenate-promotional-banner/nysenate-promotional-banner.scss
@@ -3,6 +3,7 @@
 .c-block--initiative {
   position: relative;
   padding: 0;
+  margin: 0;
   @extend .lgt-bg;
 
   .node__content .c-block {
@@ -57,6 +58,7 @@
   .c-block--initiative {
     clear: both;
     padding: 0;
+    margin: 0;
 
     .c-block--btn {
       padding-left: 25px;
@@ -73,8 +75,8 @@
 
   .c-block .c-initiative--title {
     font-family: $font-serif;
-    font-size: 32px;
-    line-height: 37.6px;
+    font-size: 36px;
+    line-height: 42.3px;
   }
 
   // has img modifications
